2017-06-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 41317: Src/exec.c: use heap allocation in getoutputfile() to
	plug memory leak

2017-06-17  Barton E. Schaefer  <schaefer@zsh.org>

	* 41242: Src/Zle/compcore.c, Src/Zle/zle_tricky.c: zstrbcmp(...)
	removed in favor of zstrcmp(..., SORTIT_IGNORING_BACKSLASHES)

2017-06-16  Barton E. Schaefer  <schaefer@zsh.org>

	* Wieland Hoffmann: 41265: Functions/Zle/insert-files: quote
	the inserted file names as necessary

2017-06-13  Eric Cook  <llua@gmx.com>

	* unposted: Functions/Zle/url-quote-magic: fix typo
	in the examples

	* Stephane: 41275: Src/Zle/zle_main.c: Leave stdin open
	when executing widgets.

2017-06-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 41284: Src/builtin.c, Test/B01cd.ztst: fix null dereference on
	cd with no argument if HOME is not set.

2017-06-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 41244: Doc/Zsh/builtins.yo, Src/Modules/zftp.c,
	Src/Zle/zle_thingy.c, Src/builtin.c, Src/module.c: Add zmodload
	-s (silent) option by exposing low-level argument to builtin.

2017-06-09  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/BUGS: Add to Etc/BUGS 41184,41203,41254 about
	STTY and about modules.

2017-06-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 41239: Src/hist.c, Src/zsh.h: Save and restore default history
	event on context stack.  This prevents expansions in ZLE from
	propagating to the command line expansion.

	* Sebastian: 41232: Functions/Misc/zed: use terminfo to find
	page up/down keys where available.

2017-06-05  Barton E. Schaefer  <schaefer@zsh.org>

	* 41225: Src/params.c: sethparam() should not attempt to change
	special	parameters into hashes

2017-06-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 41191: Src/Zle/textobjects.c, Src/Zle/zle.h,
	Src/Zle/zle_keymap.c: Check for .thingy when we check for a
	particular thingy.

2017-05-30  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
